remove .wrap_input clipping bug

--- a/css/main.scss
+++ b/css/main.scss
@@ -2691,8 +2691,6 @@ h4 {
 .wrap_input {
   position: relative;
   margin-bottom: 25px;
-  // TODO overflow hack that fixes .input_text's that stick out
-  overflow-x: hidden;
   @media only screen and (max-width: 767px) {
     margin-bottom: 15px;
   }
